<resources>
    <string name="app_name">Taxi</string>
    <string name="from">Откуда</string>
    <string name="whereabouts">Куда</string>
    <string name="when">Когда</string>
    <string name="wishes">Пожелания</string>
    <string name="taxi_booking">Заказ такси</string>
    <string name="hint_street">Улица</string>
    <string name="hint_home">Дом</string>
    <string name="hint_entrance">Подьезд</string>
    <string name="hint_comment">Комментарий</string>
    <string name="elaboration">Уточнение</string>
    <string name="from_where">Откуда</string>


    <string name="my_location">Мое местоположение</string>
    <string name="map_point">Указать точку на карте</string>
    <string name="fail_getting_address">Не удалось определить адресс из координат, сервис временно недоступен, попробуйте позже</string>

    <string name="hint_address">Адресс</string>
    <string name="show_route">Показать маршрут</string>
    <string name="taxi_order">Заказать</string>
    <string name="authoritation">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="email_address">Электронный адрес</string>
    <string name="name">Имя</string>
    <string name="telephone">Телефон</string>
    <string name="telephone_first">Телефон 1</string>
    <string name="telephone_second">Телефон 2</string>
    <string name="confirm">Подтвердить</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="error_server_connection">Ошибка подключения к серверу</string>
    <string name="error_network_unavailable">Нет интернет подключения</string>
    <string name="error_invalid_json">invalid json object</string>
    <string name="search_auto">Поиск автомобиля</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="add_favorite">Добавить в избранное</string>

    <string name="correct_registration">Вы успешно зарегистрировались</string>
    <string name="leavReview">Оставить отзыв</string>
    <string name="car_brend">Марка авто</string>
    <string name="color_auto">Цвет</string>
    <string name="type_car">тип транспорта</string>
    <string name="state_number">Гос номер</string>
    <string name="edition_year">Год выпуска</string>
    <string name="order_auto">Заказать авто</string>
    <string name="add_in_favorites">Добавить в избранное</string>
    <string name="auto_mark">Марка авто:</string>
    <string name="go_driver_info">Перейти к экрану водителя</string>
    <string name="register_success">Регистрация успешна</string>
    <string name="uncorrect_data">Введены некорректные данные</string>
    <string name="favorite_addresses">Избранные адреса</string>
    <string name="already_favorite">Уже в избранном</string>
    <string name="added_favorite">Добавлено в избранное</string>
    <string name="hint_enter_comment">Введите комментарий</string>
    <string name="settings">Настройки</string>
    <string name="enter_all_data">Введите все данные</string>
    <string name="driver_info">Информация о водителе</string>
    <string name="wifi_zona">Wifi зона</string>
    <string name="not_smokes">Салон для некурящих</string>
    <string name="animals_transportation">Перевозка животных</string>
    <string name="air_conditioning">Кондиционер</string>
    <string name="child_set">Детское кресло</string>
    <string name="payment_card">Оплата карточкой</string>
    <string name="you_entry">Вы вошли как:</string>
    <string name="change_password">Изменить пароль</string>
    <string name="by_app">О приложении</string>
    <string name="tell_friends">Рассказать друзьям</string>
    <string name="radius_search">Радиус поиска, км</string>
    <string name="exit">Выход</string>
    <string name="distance">Расстояние:</string>
    <string name="send_order_request">Отправить заказ</string>

    <string name="hint_email">Ваш email</string>
    <string name="authorization_success">Вы успешно авторизовались</string>
    <string name="auto_list">Список автомобилей</string>

    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="correct_password">Подтвердите пароль</string>
    <string name="star_for_rating">звезда для рейтинга</string>
    <string name="show_time">Выберете время, на которое должно</string>
    <string name="taxi">приехать такси</string>
    <string name="email">Email</string>
    <string name="entrance">Вход</string>
    <string name="emaill">E-mail</string>
    <string name="type_auto">Тип авто</string>
    <string name="brend_car">Марка и модель автомобиля</string>
    <string name="class_car">Класс автомобиля</string>
    <string name="soname">ФИО</string>
    <string name="town">Город</string>
    <string name="startRegistration">Зарегистрироваться</string>
    <string name="minuts_ago">минут назад</string>
    <string name="from_street">от:</string>
    <string name="to">до:</string>
    <string name="price">цена:</string>
    <string name="km">км,</string>
    <string name="grn">грн</string>
    <string name="mode_button">Режимы работы</string>
    <string name="call_client">Звонок клиенту</string>
    <string name="take">Принять</string>
    <string name="reject">Отказать</string>
    <string name="amend_password">Изменить пароль</string>
    <string name="amend_town">Изменить город</string>
    <string name="add_telephone">Добавить телефон</string>
    <string name="callsign_number">Позывной номер</string>
    <string name="additional_services">Дополнительные услуги и тарифы:</string>
    <string name="delivery_checks">Выдача чеков</string>
    <string name="selery_taximeter">Оплата по таксометру</string>
    <string name="download_in_car">Загрузка салона</string>
    <string name="save_change">Сохранить изминения</string>
    <string name="points">Points</string>

    <string name="no_text" />
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="done">Готово</string>
    <string name="send">Отправить</string>
</resources>
