<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:inputType="textEmailAddress"
                android:hint="@string/emaill"
                android:id="@+id/emailDriverRegistrationEdit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/passwordDriverRegistrationEdit" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:inputType="text"
                android:hint="@string/type_auto"
                android:textColorHint="#000"
                android:id="@+id/typeCarDriverRegistrationEdit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brend_car"
                android:inputType="textPersonName"
                android:background="@drawable/button_border_bg"
                android:gravity="center"
                android:id="@+id/brendAndMarkDriverRegistrationEdit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:hint="@string/class_car"
                android:textColorHint="#000"
                android:inputType="textPersonName"
                android:id="@+id/classCarDriverRegistrationEdit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:hint="@string/telephone_first"
                android:inputType="phone"
                android:id="@+id/telephoneFirstDriverRegistrationEdit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:hint="@string/soname"
                android:inputType="textPersonName"
                android:id="@+id/sonameDriverRegistrationEdit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_border_bg"
                android:hint="@string/town"
                android:inputType="textPersonName"
                android:id="@+id/townDriverRegistrationEdit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:gravity="center_horizontal">


            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:id="@+id/startDriverRegistrationButton"
                android:background="@drawable/confirm_button_my"
                android:text="@string/startRegistration"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>